# pytorch-dao

./: CMakeLists.txt
c10/cuda/: CMakeLists.txt  CUDACachingAllocator.cpp
caffe2/: CMakeLists.txt
dao/: CMakeLists.txt  __init__.py  readme.md  setup.py
dao/docs/: design.md  mem_alloc.md
dao/include/: DAO.h  executor.h  kernel-queue.h  utils.h
dao/include/DAO/: CPython.h  DAO.h  allocator.h  executor.h  generator.h  globals.h  utils.h
dao/python/: pybind.cc
dao/python/dao/: __init__.py  dao.py
dao/src/: CMakeLists.txt  allocator.cc  dummy_allocator.cc  executor.cc  generator.cc  globals.cc  kernel-queue.cc
dao/test/: CMakeLists.txt  printer.cc  printer.h  test_concurrentcounter.cpp  test_cpython.cpp  test_kernel.cpp  test_lock.cpp  test_optional.cc
dao/test/stub/ATen/: Scalar.h  Tensor.h
dao/testing/: add.py  gpt2.py  gpt2_torch_dao.py  linear.py  mnist.py
dao/testing/gpt2/: encoder.py  gpt2_torch_dao.py  load_datasets.py  readme.md  requirement.txt  utils.py
tools/autograd/: gen_variable_type.py
torch/: CMakeLists.txt
torch/csrc/: Module.cpp
torch/csrc/autograd/: autograd_not_implemented_fallback.cpp
torchgen/dest/: register_dispatch_key.py
